--- a/task-frontend/index.html
+++ b/task-frontend/index.html
@@ -8,7 +8,7 @@
       Task - Node Express Typescript Mongoose Tailwindcss ReactQuery
     </title>
   </head>
-  <body class="bg-gray-100">
+  <body class="#0f172a">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
